@@ -24,6 +24,7 @@ function pin() {
 }
 
 if (! go run scripts/mingoversion.go 1.11 &>/dev/null); then
+  pin github.com/astaxie/beego v1.11.1
   pin github.com/gin-gonic/gin v1.3.0
   pin github.com/stretchr/testify v1.4.0
   pin github.com/cucumber/godog v0.8.0
